# sdk-nrf

./: coap_test.sh  west.yml
samples/bluetooth/bsim_nus_client/: CMakeLists.txt  prj.conf  sample.yaml
samples/bluetooth/bsim_nus_client/src/: main.c  test.c
samples/mpsl/timeslot/src/: main.c
samples/openthread/coap_client/: CMakeLists.txt
samples/openthread/coap_client/boards/: nrf52_bsim.conf
samples/openthread/coap_client/src/: bsim_dk_buttons_and_leds.c
samples/openthread/coap_server/: CMakeLists.txt
samples/openthread/coap_server/src/: test_server.c
subsys/bluetooth/controller/: Kconfig
tests/bsim/: README.md  compile.sh
tests/bsim/bsim_nus_client/: CMakeLists.txt  prj.conf  sample.yaml
tests/bsim/bsim_nus_client/src/: main.c  test.c  test_nus_if.h
tests/bsim/samples/: compile.sh
tests/bsim/samples/coap_nus/test_scripts/: coap_test.sh  coap_test_nus.sh
tests/bsim/samples/openthread/coap_client/: CMakeLists.txt  Kconfig  prj.conf
tests/bsim/samples/openthread/coap_client/src/: bsim_dk_buttons_and_leds.c  bsim_test_client.c
tests/bsim/samples/openthread/coap_server/: CMakeLists.txt  Kconfig  prj.conf
tests/bsim/samples/openthread/coap_server/src/: test_server.c
